Change appearance of text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <img src="images/dinos-r-us.svg" alt="Dinos R Us">
+  <h1>Hadrosaur</h1>
+  <figure>
+    <img src="images/hadrosaur.jpg" alt="Hadrosaur">
+    <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+  </figure>
+
 
 
 </body>
