--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     <img src="images/hadrosaur.jpg" alt="Hadrosaur">
     <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
   </figure>
+  <h1>Iguanodon</h1>
+  <figure>
+    <img src="images/iguanodon.jpg" alt="Iguanodon">
+    <figcaption>Iguanodon is a genus of onithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
+  </figure>
+  <h1>Stegosaurus</h1>
+  <figure>
+    <img src="images/stegosaurus.jpg" alt="Stegosaurus">
+    <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
+  </figure>
+
 
 
 
