Add navigation links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <img src="images/dinos-r-us.svg" alt="Dinos R Us">
+  <nav>
+    <ol>
+      <li>Hadrosaur</li>
+      <li>Iguanodon</li>
+      <li>Stegosaurus</li>
+    </ol>
   <h1>Hadrosaur</h1>
   <figure>
     <img src="images/hadrosaur.jpg" alt="Hadrosaur">
