--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <img src="images/dinos-r-us.svg" alt="Dinos R Us">
   <nav>
     <ol>
-      <li>Hadrosaur</li>
-      <li>Iguanodon</li>
-      <li>Stegosaurus</li>
+      <li><a href="#hadrosaur">Hadrosaur</a></li>
+      <li><a href="#iguanodon">Iguanodon</a></li>
+      <li><a href="#stegosaurus">Stegosaurus</a></li>
     </ol>
-  <h1>Hadrosaur</h1>
+  <h1 id="hadrosaur"> Hadrosaur</h1>
   <figure>
     <img src="images/hadrosaur.jpg" alt="Hadrosaur">
     <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
   </figure>
-  <h1>Iguanodon</h1>
+  <h1 id="iguanodon">Iguanodon</h1>
   <figure>
     <img src="images/iguanodon.jpg" alt="Iguanodon">
     <figcaption>Iguanodon is a genus of onithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
   </figure>
-  <h1>Stegosaurus</h1>
+  <h1 id="stegosaurus">Stegosaurus</h1>
   <figure>
     <img src="images/stegosaurus.jpg" alt="Stegosaurus">
     <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
